--- a/public/styles.css
+++ b/public/styles.css
@@ -109,3 +109,27 @@
       font-size: 1.2em;
       cursor: pointer;
     }
+    .login button{
+      margin-top: 20px;
+      background: #385170;
+      color: white;
+      padding: 6px;
+      border: 0;
+      font-size: 1.2em;
+      cursor: pointer;
+    }
+    .login input,
+    .login textarea{
+      display: block;
+      width: 30%;
+      margin: 10px 0;
+      padding: 8px;
+    }
+    .login.button {
+      -webkit-appearance: button;
+      -moz-appearance: button;
+      appearance: button;
+       
+      text-decoration: none;
+      color: initial;
+  }
