--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,13 +1,16 @@
 <nav>
   <div class="site-title">
     <a href="/"><h1>Infotech</h1></a>
-    <p>Descrição</p>
   </div>
   <ul>
     <li><a href="/">Início</a></li>
     <li><a href="/about">Sobre</a></li>
-    <li><a href="/blogs/create">Nova publicação</a></li>
-    <li><a href="/blogs/registroifads">Registrar Aluno de ADS do IFSP</a></li>
-    <li><a href="/blogs/registropessoasti">Registrar pessoas que trabalham com TI</a></li>
+    <li><a href="/areas">Áreas</a></li>
+    <li><a href="/cursos">Cursos</a></li>
+    <li><a href="/blogs/create">Vagas</a></li>
+    <li><a href="/blogs/registroifads">Registrar Aluno IFSP</a></li>
+    <li><a href="/loginifads">Login Aluno IFSP</a></li>
+    <li><a href="/blogs/registropessoasti">Registrar Profissional</a></li>
+    <li><a href="/loginpessoasti">Login Profissional</a></li>
   </ul>
 </nav>
