--- a/views/registropessoasti.ejs
+++ b/views/registropessoasti.ejs
@@ -9,16 +9,31 @@
       <label for="nome">Nome<br></label>
       <input type="text" id="nome" name="nome" required>
       <br>
-      <label for="email">E-mail<br></label>
-      <input type="text" id="email" name="email" required>
-      <br>
-      <label for="cidade">Cidade<br></label>
-      <input type="text" id="cidade" name="cidade" required>
+      <label for="sexo">Sexo<br></label>
+      <label>
+        <input type="radio" name="sexo" value="Feminino" checked>Feminino
+      </label>
+      <label>
+        <input type="radio" name="sexo" value="Masculino">Masculino
+      </label>
+      <label>
+        <input type="radio" name="sexo" value="Outro">Outro
+      </label>
+      <input type="text" id="sexo">
       <br>
       <label for="datanasc">Data de nascimento<br></label>
       <input type="date" id="datanasc" name="datanasc" required>
       <br>
-      <label for="formacaoti">Sua formaçao é em TI?<br></label>
+      <label for="email">E-mail<br></label>
+      <input type="text" id="email" name="email" required>
+      <br>
+      <label for="telefone">Telefone:</label>
+      <input type="text" id="telefone" name="telefone" required>
+      <br>
+      <label for="cidade">Cidade<br></label>
+      <input type="text" id="cidade" name="cidade" required>
+      <br>
+      <label for="formacaoti">Sua formação é em TI?<br></label>
       <label>
         <input type="radio" name="formacaoti" value="Sim" checked>Sim
       </label>
@@ -37,12 +52,6 @@
       <br>
       <label for="resumotrabalho">Resuma seu trabalho e o que faz<br></label>
       <input type="text" id="resumotrabalho" name="resumotrabalho" required>
-      <br>
-      <label for="dificuldade">Qual foi sua maior dificuldade em ingressar na área?<br></label>
-      <input type="text" id="dificuldade" name="dificuldade" required>
-      <br>
-      <label for="oquediria">O que você diria para uma pessoa que quer ingressar em TI?<br></label>
-      <input type="text" id="oquediria" name="oquediria" required>
       <br>
       <button>Enviar</button>
     </form>
