Adição de registro de vagas por empresas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
         </a>
       <% }) %>
     <% } else { %>
-      <p>There are no blogs to display...</p>
+      <p>Não há nenhuma publicação</p>
     <% } %>
     
   </div>
