--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,5 +12,6 @@
     <li><a href="/loginifads">Login Aluno IFSP</a></li>
     <li><a href="/blogs/registropessoasti">Registrar Profissional</a></li>
     <li><a href="/loginpessoasti">Login Profissional</a></li>
+    <li><a href="/empresa">Registrar vaga de emprego</a></li>
   </ul>
 </nav>
