Ajustes nas páginas de empresa e aluno

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -6,9 +6,9 @@
 
   <div class="create-blog content">
     <form action="/blogs" method="POST">
-      <label for="title">Título da publicação</label>
+      <label for="title">Nome da vaga</label>
       <input type="text" id="title" name="title" required>
-      <label for="snippet">Breve resumo</label>
+      <label for="snippet">Área da vaga</label>
       <input type="text" id="snippet" name="snippet" required>
       <label for="body">Conteúdo</label>
       <textarea id="body" name="body" required></textarea>
