--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,5 +13,6 @@
     <li><a href="/blogs/registropessoasti">Registrar Profissional</a></li>
     <li><a href="/loginpessoasti">Login Profissional</a></li>
     <li><a href="/empresa">Registrar vaga de emprego</a></li>
+    <li><a href="/loginempresa">Login Empresas</a></li>
   </ul>
 </nav>
