--- a/views/registroempresa.ejs
+++ b/views/registroempresa.ejs
@@ -15,6 +15,9 @@
       <label for="email">E-mail:</label>
       <input type="email" id="email" name="email" required>
       <br>
+      <label for="senha">Senha</label>
+      <input type="password" id="senha" name="senha" required>
+      <br>
       <label for="telefone">Telefone:</label>
       <input type="text" id="telefone" name="telefone" required>
       <br>
@@ -28,7 +31,7 @@
       <input type="text" id="buscando" name="buscando" required>
       <br>
       <label for="vaga">Cadastro da vaga ofertada</label>
-      <textarea id="vaga" name="vaga" required></textarea>
+      <textarea id="vaga" name="vaga"></textarea>
       <br>
       <button>Enviar</button>
     </form>
